@@ -1,3 +1,6 @@
+7/3/12
+  Handles multiple transient windows properly now
+
 28/2/12
   Removed remembering previous current window as not woking properly
 
